fix footer jump final

--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -141,7 +141,7 @@ Global elements
   height 40px
   background url(spriteLink) no-repeat
   display inline-block
-  margin 8px 0 0 50px
+  margin 8px 0 0 11px
   &.icon-resoft-logo
     opacity 0
     transition transition
@@ -241,12 +241,12 @@ Global elements
   float right
   margin 10px 44px 0 0
   background-image url(spriteLink)
-  width 79px
+  width 80px
   height 80px
   &.skype
-    background-position 0 -240px
+    background-position 2px -240px
     &:hover
-      background-position -79px -240px
+      background-position -80px -240px
   &.facebook
       background-position 0 -160px
   &:hover
@@ -337,7 +337,7 @@ for num in (0..8)
   height 641px
   background-size cover
   .logo
-    padding 58px 0 0 52px
+    padding 58px 0 0 11px
     text-align center
     .icon-logo-big
       margin-bottom -10px
@@ -391,7 +391,6 @@ for num in (0..8)
   h3
     font-size 28px
     font-family "Reef-bold", sans-serif
-    text-align center
   .text-services
     display inline-block
     position relative
